tests/samples/negative/functions/impl_target_not_named.ax
module impl_target_not_named;

impl i32 {
    fn read(self: i32) -> i32 {
        return self;
    }
}

fn main() -> i32 {
    return 0;
}
